startx: Choose an unused $DISPLAY by default on all platforms

Now everyone can benefit from this code that I previously added for darwin

https://bugs.freedesktop.org/show_bug.cgi?id=1789

Signed-off-by: Jeremy Huddleston <jeremyhu@apple.com>